# span

./: .gitignore  .gitmodules  README.md  flake.nix  test
tree/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test
tree/source/: collection.hpp  emst.hpp  emst_checkpoint.hpp  emst_merge_proto.hpp  emst_old_dfs.hpp  emst_panna.hpp  emst_puffinn.hpp  emst_test.cpp  emst_test_panna.cpp  emst_test_puffinn.cpp  plot.py  prefixmap.hpp  test.cpp  trieindex.hpp
